--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.12.2",
+    "dot-env": "^0.0.1",
     "express": "^5.1.0",
     "hbs": "^4.2.0"
   }
